...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sgl-9d-dM3">
                                <rect key="frame" x="16" y="612" width="361" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="fKm-Jc-hqD"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Войти" subtitle="" titleAlignment="center">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="22"/>
                                    <color key="baseForegroundColor" name="launchscreen + 1 screen"/>
                                    <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
